--- a/package.json
+++ b/package.json
@@ -19,31 +19,23 @@
     "babel-preset-env": "^1.4.0",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
-    "chai": "^3.5.0",
-    "chai-enzyme": "^0.6.1",
-    "chai-jquery": "^2.0.0",
-    "enzyme": "^2.8.1",
-    "jquery": "^2.2.1",
-    "jsdom": "^8.1.0",
-    "mocha": "^2.4.5",
-    "react-addons-test-utils": "^0.14.7",
-    "redux-mock-store": "^1.2.3",
-    "sinon": "^2.1.0",
-    "webpack": "^1.15.0",
-    "webpack-dev-server": "^1.14.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.0",
     "cors": "^2.7.1",
     "dotenv": "^4.0.0",
     "express": "^4.13.4",
+    "jsdom": "^8.1.0",
     "jwt-simple": "^0.5.0",
     "mongodb": "^2.2.26",
     "mongoose": "^4.4.7",
     "morgan": "^1.7.0",
-    "nodemon": "^1.9.1",
     "passport": "^0.3.2",
     "passport-jwt": "^2.0.0",
     "passport-local": "^1.0.0",
+    "react-addons-test-utils": "^0.14.7",
+    "redux-mock-store": "^1.2.3",
+    "webpack": "^1.15.0",
+    "webpack-dev-server": "^1.14.0",
     "yelp-fusion": "^1.0.3"
   },
   "dependencies": {
@@ -71,6 +63,7 @@
   },
   "keywords": [
     "react",
-    "redux"
+    "redux",
+    "MERN"
   ]
 }
